--- a/Project_Loan_Defaults.Rmd
+++ b/Project_Loan_Defaults.Rmd
@@ -2,11 +2,13 @@
 title: "Project_1"
 author: "Eli (Ilya) Bolotin"
 date: "04/05/2019"
-output: pdf_document
+output:
+  word_document: default
+  pdf_document: default
 fontsize: 11
 header-includes:
-  - \usepackage{fvextra}
-  - \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
+- \usepackage{fvextra}
+- \DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
 ---
 
 ```{r setup, include=FALSE}
@@ -321,7 +323,7 @@ skewness_before
 
 ```{r eval=FALSE, include=FALSE}
 # plot skewness
-plot(skewness_before$features, skewness_before$skewness)
+# plot(skewness_before$features, skewness_before$skewness)
 ```
 
 Judging from the histograms above, we can confirm that numeric features in this dataset are right-skewed. Furthermore, many features are non-trivially skewed (not in a small amount). These features could benefit from transformation/scaling. Let's compute median skewness *before* transformation.
@@ -575,11 +577,11 @@ printCT <- function(ctable) {
 
 printRates <- function(ctable) {
   rate_list = c()
-  true_negative <- round((ctable[1,1]/ctable[1,3])*100,2)
-  true_positive <- round((ctable[2,2]/ctable[2,3])*100,2)
+  true_negative <- round((ctable[1,1]/ctable[3,1])*100,2)
+  true_positive <- round((ctable[2,2]/ctable[3,2])*100,2)
   # rate_list = c(rate_list, true_negative, true_positive)
-  cat("True negative rate (%): ", true_negative, "\n")
-  cat("True positive rate (%): ", true_positive, "\n")
+  cat("TNR (%) - Recall: ", true_negative, "\n")
+  cat("TPR (%) - Recall: ", true_positive, "\n")
   # return(rate_list)
 }
 ```
@@ -629,7 +631,7 @@ accuracy_plot <- as.data.frame(cbind(t_list, y_list))
 ggplot(accuracy_plot, aes(x=t_list, y=y_list)) + 
   geom_point()+
   geom_smooth(method="loess") +
-  labs(title = "Classification Threshold vs Model Accuracy", x = "Threshold", y = "Model Accuracy (%)") +
+  labs(title = "Model Accuracy vs Threshold", x = "Threshold", y = "Model Accuracy (%)") +
   scale_y_continuous(breaks=seq(0,1,.20), limits=c(0,1))
 ```
 
